examples/passing/semantics/join_fastforward.gm
x = 2;
$t = spawn { x = 3; };
join $t;
assert(x == 3);
