examples/failing/semantics/failed_assertion.gm
x = 0;
$t = spawn {
    x = 1;
};
join $t;
assert(x == 0);
